# hw-excess

./: .gitignore  .travis.yml  README.md  circle.yml  hw-excess.cabal  package.yaml  packages.list
bench/: Main.hs
src/HaskellWorks/Data/: Excess.hs
src/HaskellWorks/Data/Excess/: Excess0.hs  Excess1.hs  Internal.hs  Mem0.hs  Mem1.hs  MinExcess.hs  MinExcess0.hs  MinExcess1.hs  MinMaxExcess0.hs  MinMaxExcess1.hs  PartialMem0.hs  PartialMem1.hs  PartialMinExcess0.hs  PartialMinExcess1.hs  PartialMinMaxExcess0.hs  PartialMinMaxExcess1.hs  Triplet.hs
src/HaskellWorks/Data/Excess/Internal/: Branchless.hs  Table.hs  Triplet8.hs
src/HaskellWorks/Data/Excess/Internal/Partial/: Leh0.hs  Leh1.hs  PartialMem0.hs  PartialMem1.hs  Table.hs
src/HaskellWorks/Data/Excess/Internal/Table/: Leh.hs
test/HaskellWorks/Data/Excess/: Mem0Spec.hs  Mem1Spec.hs  MinExcess0Spec.hs  MinExcess1Spec.hs  MinMaxExcess0Spec.hs  MinMaxExcess1Spec.hs  PartialMinExcess0Spec.hs  PartialMinExcess1Spec.hs  PartialMinMaxExcess0Spec.hs  PartialMinMaxExcess1Spec.hs
test/HaskellWorks/Data/Excess/Internal/: BranchlessSpec.hs
