cabal-version: 1.12
name:           hw-excess
version:        0.2.0.2
synopsis:       Excess
description:    Please see README.md
category:       Data, Succinct Data Structures, Data Structures
homepage:       http://github.com/haskell-works/hw-excess#readme
bug-reports:    https://github.com/haskell-works/hw-excess/issues
author:         John Ky
maintainer:     newhoggy@gmail.com
copyright:      2016 John Ky
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 8.4.2, GHC == 8.2.2, GHC == 8.0.2, GHC == 7.10.3
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-excess

library
  exposed-modules:
      HaskellWorks.Data.Excess
      HaskellWorks.Data.Excess.Excess0
      HaskellWorks.Data.Excess.Excess1
      HaskellWorks.Data.Excess.MinMaxExcess0
      HaskellWorks.Data.Excess.MinMaxExcess1
      HaskellWorks.Data.Excess.Triplet
  other-modules:
      Paths_hw_excess
  hs-source-dirs:
      src
  ghc-options: -Wall -O2 -msse4.2
  build-depends:
      base >=4.8 && <5
    , hw-bits >=0.4.0.0 && <0.8
    , hw-prim >=0.4.0.0 && <0.8
    , hw-rankselect-base >=0.2.0.0 && <0.4
    , safe >=0.2 && <0.4
    , vector >=0.12 && <0.13
  default-language: Haskell2010

test-suite hw-excess-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      HaskellWorks.Data.Excess.MinMaxExcess0Spec
      HaskellWorks.Data.Excess.MinMaxExcess1Spec
      Paths_hw_excess
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck >=2.10 && <2.12
    , base >=4.8 && <5
    , hspec >=2.3 && <2.6
    , hw-bits >=0.4.0.0 && <0.8
    , hw-excess
    , hw-prim >=0.4.0.0 && <0.8
    , vector >=0.12 && <0.13
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
